--- a/BlackSys/Content/vertical-tabs-css/index.html
+++ b/BlackSys/Content/vertical-tabs-css/index.html
@@ -17,7 +17,7 @@
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet" />
+		<!--<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet" />-->
 
 		<!-- CSS Files -->
 		<link rel="stylesheet" href="./dist/css/style.css" type="text/css" media="all" />
