--- a/BlackSys/Content/vertical-tabs-css/vertical-tabs-css/index.html
+++ b/BlackSys/Content/vertical-tabs-css/vertical-tabs-css/index.html
@@ -96,7 +96,7 @@
 			</footer>
 		</div>
 		<!-- Javascript Files -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
 		<script src="./dist/js/app.js"></script>
 	</body>
 </html>
